aula 09 criando conexao banco de dados e form padrao

--- a/Forms/__recovery/__recovery.ini
+++ b/Forms/__recovery/__recovery.ini
@@ -1,5 +1,10 @@
 [U_principal.pas]
-SaveTime=28/07/2025 10:36:55
+SaveTime=28/07/2025 14:26:56
 FileCount=2
 File0=C:\ESTOQUE\Forms\U_principal.pas
 File1=C:\ESTOQUE\Forms\U_principal.dfm
+[U_DM.pas]
+SaveTime=28/07/2025 14:26:56
+FileCount=2
+File0=C:\ESTOQUE\Forms\U_DM.pas
+File1=C:\ESTOQUE\Forms\U_DM.dfm
