aula 10 criando formulario usuarios heranca

--- a/Forms/__recovery/__recovery.ini
+++ b/Forms/__recovery/__recovery.ini
@@ -1,15 +1,10 @@
-[U_principal.pas]
-SaveTime=28/07/2025 14:36:56
-FileCount=2
-File0=C:\ESTOQUE\Forms\U_principal.pas
-File1=C:\ESTOQUE\Forms\U_principal.dfm
-[U_DM.pas]
-SaveTime=28/07/2025 14:36:56
-FileCount=2
-File0=C:\ESTOQUE\Forms\U_DM.pas
-File1=C:\ESTOQUE\Forms\U_DM.dfm
 [U_padrao.pas]
-SaveTime=28/07/2025 14:36:56
+SaveTime=30/07/2025 19:40:08
 FileCount=2
 File0=C:\ESTOQUE\Forms\U_padrao.pas
 File1=C:\ESTOQUE\Forms\U_padrao.dfm
+[U_usuario.pas]
+SaveTime=30/07/2025 19:40:08
+FileCount=2
+File0=C:\ESTOQUE\Forms\U_usuario.pas
+File1=C:\ESTOQUE\Forms\U_usuario.dfm
