--- a/Projeto/Controle_estoque.dproj
+++ b/Projeto/Controle_estoque.dproj
@@ -106,6 +106,15 @@
             <Form>Frm_principal</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="..\Forms\U_DM.pas">
+            <Form>DM</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TDataModule</DesignClass>
+        </DCCReference>
+        <DCCReference Include="..\Forms\U_padrao.pas">
+            <Form>Frm_padrao</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
@@ -133,7 +142,7 @@
                 </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="4">
-                <DeployFile LocalName="Win32\Debug\Controle_estoque.exe" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="..\XE\Controle_estoque.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>Controle_estoque.exe</RemoteName>
                         <Overwrite>true</Overwrite>
