22 criando formulario cadastr de clientes

--- a/Projeto/Controle_estoque.dproj
+++ b/Projeto/Controle_estoque.dproj
@@ -115,6 +115,18 @@
             <Form>Frm_padrao</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="..\Forms\U_usuario.pas">
+            <Form>Frm_usuario</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="..\Forms\U_empresa.pas">
+            <Form>Frm_padrao1</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="..\Forms\U_clientes.pas">
+            <Form>Frm_Cliente</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
